frontend/src/web/components/AuthForm/AuthForm.module.css
.formTitleContainer {
  display: flex;
  gap: 16px;
  margin-bottom: 20px;
}

.title {
  font-size: 40px;
  font-family: "Shantell Sans", sans-serif;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;

  margin-bottom: 15px;

  width: 100%;
}

.inputsContainer {
  display: flex;
  flex-direction: column;
  gap: 15px;

  width: 100%;
  margin-bottom: 25px;

  font-family: "Playpen Sans", sans-serif;
}

.signIn {
  width: 222px;
  height: 40px;
  max-width: 100%;
  background-color: var(--zombie-kittens);
  margin-bottom: 15px;
}

.signUp {
  font-size: 16px;
  color: rgba(var(--off-white-rgb), 0.5);

  font-family: "Shantell Sans", sans-serif;
}

.signUpLink {
  font-weight: 700;
  text-decoration: underline;
  color: var(--off-white);
}

